# ai-reference-implementation

./: README.md  pyproject.toml
app/: config.py  cost_control.py  governance.py  main.py  models.py  routing.py
app/providers/: base.py  mock_provider.py  openai_provider.py
app/schemas/: request.py  response.py
tests/: test_routing.py
