[project]
name = "enterprise-ai-platform"
version = "0.1.0"
description = "Reference implementation for AI platform architecture"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"